Changes to be committed: 	modified:   ../.config/hypr/hypridle.conf

--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -18,5 +18,5 @@ listener {
     on-timeout = systemctl suspend
     on-resume = echo "woke up"
 
-    conditions = battery
+    conditions = battery # opravit, podminka nefunguje
 }
