--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,7 +36,7 @@ monitor=,1366x768,auto,auto
 # Set programs that you use
 $terminal = alacritty
 $fileManager = thunar
-$menu = wofi --show drun
+$menu = rofi -show run
 
 
 #################
