--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor=,1366x768,auto,auto
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = thunar
+$fileManager = dolphin
 $menu = rofi -show run
 
 
