--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -48,7 +48,7 @@ $menu = rofi -show run
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & hypridle
+exec-once = waybar & hyprpaper & hypridle & swayosd-server &
 exec = gsettings set org.gnome.desktop.interface gtk-theme "breeze-dark"   # for GTK3 apps
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
 
@@ -273,13 +273,21 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+#sway-osd stuff
+
+# Sink volume raise optionally with --device
+bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
+# Sink volume lower optionally with --device
+bindel = ,XF86AudioLowerVolume, exec,  swayosd-client --output-volume lower 
+# Sink volume toggle mute
+bindel = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+# Source volume toggle mute
+bindel = ,XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
+# Brightness up
+bindel = ,XF86MonBrightnessUp, exec, swayosd-client --brightness raise
+# Brightness down
+bindel = ,XF86MonBrightnessDown, exec, swayosd-client --brightness lower
+
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
