monitor setup - universal

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,7 +24,7 @@ ecosystem:no_update_news=true
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,1366x768,auto,auto
+monitor=,preferred,auto,auto
 
 
 ###################
