--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@
 # source = ~/.config/hypr/myColors.conf
 
 # disable update shit
-ecosystem:no_update_news=true
+
 
 ################
 ### MONITORS ###
@@ -86,7 +86,7 @@ general {
     resize_on_border = false
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
+    allow_tearing = true
 
     layout = dwindle
 }
@@ -100,10 +100,10 @@ decoration {
     inactive_opacity = 1.0
 
     shadow {
-        enabled = false
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
+       # enabled = false
+       # range = 4
+       # render_power = 3
+       # color = rgba(1a1a1aee)
     }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
